# PyIGV

./: .gitignore  LICENSE  MANIFEST.in  README.md  generate_example_image.py  setup.cfg
.github/workflows/: publish.yml
src/pyigv/: __init__.py  alignment.py
tests/: test_alignment.py
