[metadata]
name = PyIGV
version = 0.1.0
author = Frank Liu
author_email = frankliu@nyu.edu
description = A Python interface to IGV-style alignment visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/regev-lab/PyIGV
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    flake8
    black
