[metadata]
name = PyIGV
version = 0.1.4
author = Frank Liu
author_email = frankliu@nyu.edu
description = A Python interface to IGV-style alignment visualization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/regev-lab/PyIGV
license = MIT
keywords =
    igv
    alignment
    visualization
    bioinformatics
    genomics
project_urls =
    Documentation = https://github.com/regev-lab/PyIGV#readme
    Bug Tracker = https://github.com/regev-lab/PyIGV/issues
    Source Code = https://github.com/regev-lab/PyIGV

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
    matplotlib>=3.3.0
    biopython>=1.86

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    flake8
    black
